crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_paused_menu.snap
---
source: crates/cowboy-tui/src/app/mod.rs
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│› do work                                      ││no network activity  │
│                                               ││yet                  │
│                                               ││                     │
│   ╭ Paused ──────────────────────────────────────────────────────╮   │
│   │r  resume                                                     │   │
│   │i  instruct — stop this turn and redirect (history kept)      │   │
│   │k  kill — stop the running command/turn only                  │───╯
│   │d  detach — leave it running in the background, exit          │───╮
│   │e  end — finish the session                                   │vit│
│   │                                                              │   │
│   │press a key  ·  Esc = resume                                  │   │
│   ╰──────────────────────────────────────────────────────────────╯   │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   paused — ready
╭ Enter send · Shift+Enter newline · /help · Ctrl-C interrupt ─────────╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
