crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_plan_pane.snap
---
source: crates/cowboy-tui/src/app/mod.rs
expression: render(&app)
---
╭ cowboy · 20260614-abcd ───────────────────────╮╭ plan 1/3 ───────────╮
│› refactor the parser                          ││✓ read the existing  │
│                                               ││parser               │
│                                               ││▸ extract the        │
│                                               │╰─────────────────────╯
│                                               │╭ network ────────────╮
│                                               ││no network activity  │
│                                               ││yet                  │
│                                               ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ background ─────────╮
│                                               ││no background activit│
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
⠷  thinking 0s…
╭ type to steer · /after <msg> to queue · Ctrl-C interrupts · F1 help ─╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
