crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_running_with_panes.snap
---
source: crates/cowboy-tui/src/app/mod.rs
expression: render(&app)
---
╭ cowboy ───────────────────────────────────────╮╭ network ────────────╮
│› fix the failing test                         ││ask example.com:443  │
│                                               ││                     │
│$ cargo test                                   ││                     │
│  test result: FAILED                          ││                     │
│                                               ││                     │
│Looking at the failure...                      ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ background ─────────╮
│                                               ││no background activit│
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
⠷  thinking 0s…
╭ type to steer · /after <msg> to queue · Ctrl-C interrupts · F1 help ─╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
