crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_token_total_in_status_bar.snap
---
source: crates/cowboy-tui/src/app/mod.rs
expression: render(&app)
---
╭ ~/dev/cowboy  ⎇ main ─────────────────────────╮╭ network ────────────╮
│› refactor the parser                          ││no network activity  │
│                                               ││yet                  │
│✓ Done.                                        ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
│                                               │╰─────────────────────╯
│                                               │╭ background ─────────╮
│                                               ││no background activit│
│                                               ││                     │
│                                               ││                     │
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   ready · /diff to review, then commit      ~128k↑ 9.1k↓   Δ 2f +30 -4
╭ Enter send · ↑↓ history · drag+y copy · F1 help · Ctrl-C twice to end╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
