crates/cowboy-tui/src/app/snapshots/cowboy_tui__app__tests__snapshot_welcome_screen.snap
---
source: crates/cowboy-tui/src/app/mod.rs
assertion_line: 1851
expression: render(&app)
---
╭ cowboy · 20260614-abcd ───────────────────────╮╭ network ────────────╮
│  ╔═╗╔═╗╦ ╦╔╗ ╔═╗╦ ╦                           ││no network activity  │
│  ║  ║ ║║║║╠╩╗║ ║╚╦╝                           ││yet                  │
│  ╚═╝╚═╝╚╩╝╚═╝╚═╝ ╩                            ││                     │
│  the agent runs in a sandbox                  ││                     │
│workspace  /home/dev/myproject                 ││                     │
│model      claude-sonnet-4-6  (gw.local)       ││                     │
│                                               │╰─────────────────────╯
│or start with one of these:                    │╭ background ─────────╮
│  Alt-1  Review my uncommitted changes.        ││no background activit│
│                                               ││                     │
│Type a message to begin · Enter sends          ││                     │
│                                               ││                     │
╰───────────────────────────────────────────────╯╰─────────────────────╯
   ready — ready
╭ Enter send · ↑↓ history · drag+y copy · F1 help · Ctrl-C twice to end╮
│                                                                      │
╰──────────────────────────────────────────────────────────────────────╯
